# rose-develop

config/: support-rose.m4  support-sight.m4
projects/fuse/src/: Makefile.am  compositionalTestAnalysis.C  fuse.C  fuse.h  fuseCommandParser.C  fuseCommandParser.h
projects/fuse/src/abstraction/: abstract_object.C  abstract_object.h  abstract_object_map.C  abstract_object_map.h  abstract_object_set.C  abstract_object_set.h  concrete_values.C  concrete_values.h
projects/fuse/src/analysis/: analysis.C  analysis.h  analysis_tester.C  analysis_tester.h  comp_shared_ptr.h  compose.C  compose.h  composed_analysis.C  composed_analysis.h  factor_trans_system.C  factor_trans_system.h  graphIterator.C  graphIterator.h  partitions.C  partitions.h  ssa.C  ssa.h  ssa_nosight.C  stx_analysis.C  stx_analysis.h  tight_composer.C  tight_composer.h
projects/fuse/src/cfgUtils/: CallGraphTraverse.C  CallGraphTraverse.h  DataflowCFG.C  VirtualCFGIterator.C  VirtualCFGIterator.h  cfgUtils.C  cfgUtils.h
projects/fuse/src/img/: sight_merge.C
projects/fuse/src/lattice/: lattice.C  lattice.h  latticeFull.h
projects/fuse/src/sight/: sight-disable.h  sight.h
projects/fuse/src/sight/widgets/: ats_graph_layout.C  ats_graph_layout.h  ats_graph_structure.C  ats_graph_structure.h
projects/fuse/src/simpleAnalyses/: AnalysisAstAttribute.C  AnalysisAstAttribute.h  VariableStateTransfer.h  call_context_sensitivity_analysis.C  call_context_sensitivity_analysis.h  const_prop_analysis.C  const_prop_analysis.h  const_prop_count.C  const_prop_count.h  dead_path_elim_analysis.C  dead_path_elim_analysis.h  defsAnalysis.C  defsAnalysis.h  dynamicMonitor.C  dynamicMonitor.h  live_dead_analysis.C  live_dead_analysis.h  ortho_array_analysis.C  ortho_array_analysis.h  parity_analysis.C  parity_analysis.h  pointsToAnalysis.C  pointsToAnalysis.h  printAnalysisStates.C  saveDotAnalysis.C  saveDotAnalysis.h  taintAnalysis.h  virtualMethodAnalysis.C  virtualMethodAnalysis.h
projects/fuse/src/sparse/: LatticeArith.h  LatticeArithInstance.h  PGSSA.h  SSAVariableStateTransfer.h  constantAnalysis.C  constantAnalysis.h  heapDefsAndUsesTraversal.C  heapDefsAndUsesTraversal.h  heapReachingDef.h  heapSSA.C  heapSSA.h  hssaMemObject.C  partitionGraph.h  pointerAnalysis.C  pointerAnalysis.h  valueNumbering.C  valueNumbering.h
projects/fuse/src/state/: nodeState.C  nodeState.h
projects/fuse/src/tests/: arrayPtrTestTight.cpp  cab668-slayout-19580.core  compositionalTestInput1.C  compositionalTestInput10.C  compositionalTestInput2.C  compositionalTestInput3.C  compositionalTestInput4.C  compositionalTestInput7.C  compositionalTestInput8.C  compositionalTestInput9.C  rose_compositionalTestInput9.C  sas13Fig1Example.cpp  simplePtrTestTight.cpp  simplePtrTestTight1.cpp  simplePtrTestTight2.cpp  simplePtrTestTight3.cpp  simplePtrTestTight4.cpp  simplePtrTestTight5.cpp
projects/fuse/src/tests/rers15/: Problem1.c  Problem2.c  Problem3.c
